--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "gurucomkz/silverstripe-blobpasteupload",
-    "description": "blobpasteupload",
+    "description": "Paste images to TinyMCE editor with uploading to files library",
     "type": "silverstripe-vendormodule",
     "keywords": [
         "silverstripe",
@@ -8,8 +8,8 @@
     ],
     "license": "BSD-3-Clause",
     "require": {
-        "silverstripe/framework": "^4.0",
-        "silverstripe/admin": "^1.0"
+        "silverstripe/framework": "^5.0",
+        "silverstripe/admin": "^2.0"
     },
     "require-dev": {
     },
